@@ -36,23 +36,37 @@ Heap
 打印类的直方图
 
 ### 堆的分配参数
-`-Xmx -Xms`  
+1. `-Xmx -Xms`  
 指定最大堆和最小堆(绝对值，单位为M、G)
-Java会尽可能将内存维持在最小堆。  
-`-Xmn`
+Java会尽可能将内存维持在最小堆。 
+ 
+2. `-Xmn`
 设置新生代的大小(绝对值，单位为M、G)
-`-XX:NewRatio`
+
+3. `-XX:NewRatio`
 新生代和老年代的比值，如设置为4表示新生代:老年代=1:4， 即新生代占堆的1/5
-`-XX:SurvivorRatio`
+
+4. `-XX:SurvivorRatio`
 Survivor和Eden区的比，如设置为8，表示Survivor：Eden=1:8,两个Survivor各占年轻代的1/10，
 Eden区占年轻代的8/10.
 
-`-XX:+HeapDumpOnOutOfMemoryError`
+5. `-XX:+HeapDumpOnOutOfMemoryError`
 出现OOM时保存堆信息快照到文件中  
-`-XX:+HeapDumpPath`
+
+6. `-XX:+HeapDumpPath`
 出现OOM时保存堆信息快照到文件的路径
-`-XX:OnOutOfMemoryError=<path>`
+
+7. `-XX:OnOutOfMemoryError=<path>`
 出现OOM时会执行指定位置的脚本
+
+8. `-XX：PermSize -XX:MaxPermSize`
+设置永久代的初始空间和最大空间，永久代表示可以容纳多少类型；
+在使用 CGLIB 等库的时候，可能会产生大量的类，大量的类型可能会撑爆永久区导致OOM。
+但是JDK1.8 后已经取消永久代，所以参数已经被废弃了。
+
+9. `-Xss`
+设置栈的大小，通常只有几百k；
+决定了函数调用的深度，每个线程都有自己的栈空间。
 
 #### 总结
 * 根据实际情况调整新生代和Survivor区的大小
